# sbom_genform

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  NOTICE.md  PERMISSIONS.md  README.md  docker-compose.yml  pyproject.toml
.claude/: project.md  settings.local.json
.claude/memory/: MEMORY.md  bugs.md
.github/workflows/: ci.yml  publish.yml  secgensbom.yml
config/: config.yaml
docker/: Dockerfile.formatter  Dockerfile.secgensbom  clair-config.yaml
examples/project_inject/: composer.json
script/: automate.py  constants.py  dependency.py  exporter.py  formatter.py  manual_formatter.py  pipeline.py  requirements.txt  run_report.py  sbom_handler.py  sbom_signer.py  setup_secgensbom_env.py  utils.py
scripts/: update_copyright_year.py
secgensbom/: pipeline.sh  scan_dependency_check.sh  secgensbom.yml
src/sbom_pipeline/: __init__.py  banner.py  cli.py  config.py  constants.py  dedup.py  dependency.py  exporter.py  generate.py  pipeline.py  sbom_handler.py  sign.py  utils.py  vuln_merger.py
src/sbom_pipeline/enrichters/: bdu.py
src/sbom_pipeline/scanner/: __init__.py  clair.py  depcheck.py  trivy.py
tests/: __init__.py  test_new_columns.py  test_smoke.py
tests/fixtures/sbom/git/: sbom-git-fullstack.json  sbom-git-minimal.json  sbom-git-overlap.json  sbom-git-sample.json   sbom-git-transitive.json
tests/fixtures/sbom/images/: sbom-image-backend-multistage.json   sbom-image-critical.json  sbom-image-frontend-node.json  sbom-image-sample.json
tests/integration/sbom_pipeline/enrichters/: test_bdu_integration.py
tests/unit/sbom_pipeline/: test_clair.py  test_dedup_vulns.py
tests/unit/sbom_pipeline/enrichters/: html.html  html_notfound.html  test_bdu.py
