[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbom-pipeline"
version = "2.0.0"
description = "SBOM Generator & Formatter — full Python pipeline (no shell)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "packageurl-python>=0.11.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "python-docx>=1.1.0",
    "cryptography>=41.0.0",
    "gitpython>=3.1.40",
    "cyclonedx-bom>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
sbom-pipeline = "sbom_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sbom_pipeline"]

[tool.hatch.envs.default]
dependencies = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
