[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "sbom-pipeline"
dynamic = ["version"]
description = "SBOM Generator & Formatter — full Python pipeline (no shell)"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
authors = [
    { name = "Elijah S Shmakov", email = "geminishkv@gmail.com" },
]
keywords = [
    "sbom",
    "cyclonedx",
    "software-bill-of-materials",
    "security",
    "vulnerability",
    "trivy",
    "owasp",
    "devsecops",
    "appsec",
    "sca",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "packageurl-python>=0.11.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "python-docx>=1.1.0",
    "cryptography>=41.0.0",
    "gitpython>=3.1.40",
    "cyclonedx-bom>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests",
]

[project.urls]
Homepage     = "https://github.com/geminishkv/sbom_genformatter"
Repository   = "https://github.com/geminishkv/sbom_genformatter"
Issues       = "https://github.com/geminishkv/sbom_genformatter/issues"
Changelog    = "https://github.com/geminishkv/sbom_genformatter/blob/master/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Entry points — two aliases, one tool
# ---------------------------------------------------------------------------

[project.scripts]
secsbom          = "sbom_pipeline.cli:app"
secsbom-pipeline = "sbom_pipeline.cli:app"

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "src/sbom_pipeline/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sbom_pipeline"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "ruff", "mypy", "types-requests"]

[tool.hatch.envs.default.scripts]
test     = "pytest {args:tests}"
lint     = "ruff check src tests"
typecheck = "mypy src"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version       = "3.11"
strict               = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
